--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
       box-shadow: 0 4px 20px rgba(0,0,0,0.5);
     }
 
+    /* Logo */
     .logo {
       display: block;
       margin: 0 auto 20px auto;
-      width: 80%;
-      max-width: 320px;
+      width: 60%;
+      max-width: 250px;
+      height: auto;
     }
 
     h2 {
       text-align: center;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
       color: #ff8c2a;
     }
 
@@ -86,13 +88,24 @@
       font-size: 17px;
       margin-top: 20px;
     }
+
+    @media (max-width: 500px) {
+      .container {
+        padding: 15px;
+      }
+      .logo {
+        width: 80%;
+        max-width: 200px;
+      }
+    }
   </style>
 
 </head>
 <body>
   <div class="container">
 
-    <img src="logo-autoservicegolf.png" class="logo" alt="Auto Service Golf Logo">
+    <!-- Updated logo path -->
+    <img src="images/logo-autoservicegolf.png" class="logo" alt="Auto Service Golf Logo">
 
     <h2>Vehicle Work Order</h2>
 
