--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 <body>
   <div class="container">
 
-    <!-- Updated logo path -->
-    <img src="images/logo-autoservicegolf.png" class="logo" alt="Auto Service Golf Logo">
+    <!-- Fixed logo -->
+    <img src="https://raw.githubusercontent.com/infoautoservisgolf-tech/autoservicegolf-form/main/images/logo-autoservicegolf.jpg" class="logo" alt="Auto Service Golf Logo">
 
     <h2>Vehicle Work Order</h2>
 
